crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@nested-pyproject-workspace_nested-pyproject.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: nested-pyproject-workspace/pyproject.toml
- Name: nested-pyproject-workspace
Package: nested-pyproject @ 0.1.0

## ExplicitManifest
Discovered workspace at: nested-pyproject-workspace/pyproject.toml
- Name: nested-pyproject-workspace
Package: nested-pyproject @ 0.1.0
