crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@nested-workspace.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: nested-workspace/pixi.toml
- Name: nested-workspace

## ExplicitManifest
Discovered workspace at: nested-workspace/pixi.toml
- Name: nested-workspace
