crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@non-pixi-build.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: non-pixi-build/pixi.toml
- Name: non-build-workspace

## ExplicitManifest
Discovered workspace at: non-pixi-build/pixi.toml
- Name: non-build-workspace
