crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@non-pixi-build_project.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
  × [package] section is only allowed when the `pixi-build` feature is enabled
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/non-pixi-build/project/pixi.toml:1:1]
 1 │ ╭─▶ [package]
 2 │ │   name = "package"
 3 │ ╰─▶ version = "0.1.0"
 4 │
   ╰────
  help: Add `preview = ["pixi-build"]` under [workspace] to enable the preview feature
## ExplicitManifest
  × [package] section is only allowed when the `pixi-build` feature is enabled
   ╭─[<CARGO_ROOT>/tests/data/workspace-discovery/non-pixi-build/project/pixi.toml:1:1]
 1 │ ╭─▶ [package]
 2 │ │   name = "package"
 3 │ ╰─▶ version = "0.1.0"
 4 │
   ╰────
  help: Add `preview = ["pixi-build"]` under [workspace] to enable the preview feature
