crates/pixi_manifest/src/snapshots/pixi_manifest__discovery__test__workspace_discoverer@package_a.snap
---
source: crates/pixi_manifest/src/discovery.rs
expression: combined_snapshot
---
## SearchRoot
Discovered workspace at: pixi.toml
- Name: workspace-discovery
Package: package_a @ 0.1.0

## ExplicitManifest
Discovered workspace at: pixi.toml
- Name: workspace-discovery
Package: package_a @ 0.1.0
